# plc_runtime

./: CMakeLists.txt  claude.md  collect_prj.sh  main.cpp
core/: ComponentManager.cpp  ComponentManager.hpp  IComponent.hpp  IGpioDriverProvider.hpp  IIoSystem.hpp  IPlugin.hpp  IScheduler.hpp  ISimulation.hpp  ITaskManager.hpp  IoBuffer.hpp  PluginLoader.cpp  PluginLoader.hpp  ProcessImage.hpp  Scheduler.cpp  Scheduler.hpp  SchedulerComponent.cpp  SchedulerComponent.hpp  SystemBus.hpp  TaskManager.cpp  TaskManager.hpp  TaskManagerComponent.cpp  TaskManagerComponent.hpp  value.cpp
core/io/: IIODriver.hpp  IOAddress.hpp
plugins/iec_runtime/: CMakeLists.txt
plugins/iec_runtime/include/: IIecRuntime.hpp  IecProgram.hpp  IecRawBuffer.hpp  MatiecLoader.hpp
plugins/iec_runtime/src/: IecProgram.cpp  IecRuntimePlugin.cpp  MatiecLoader.cpp
plugins/simulation/: CMakeLists.txt
plugins/simulation/include/: GpioSimulator.hpp  SimulationPlugin.hpp
plugins/simulation/src/: SimulationPlugin.cpp
plugins/simulator/: CMakeLists.txt
plugins/simulator/include/: IGpioScenario.hpp  IGpioSimulator.hpp
plugins/simulator/src/: GpioSimulatorPlugin.cpp  SimulatedGpioDriver.hpp
plugins/system_monitor/: CMakeLists.txt  CMakeLists.txt.save
plugins/system_monitor/include/: ISystemMonitor.hpp  SystemMonitorPlugin.hpp  WatchdogChecker.hpp
plugins/system_monitor/src/: SystemMonitorPlugin.cpp  WatchdogChecker.cpp
plugins/vm_runtime/: CMakeLists.txt
plugins/vm_runtime/compiler/: ast.hpp  direct_address_parser.hpp  lexer.cpp  lexer.hpp  opcodes.hpp  parser.cpp  parser.hpp  type_checker.hpp
plugins/vm_runtime/include/: IVmRuntime.hpp  VmProgram.hpp  VmRawBuffer.hpp  execution_context.hpp  io_binding.hpp  io_mapper.hpp  serializer.hpp  value.hpp  vm.hpp
plugins/vm_runtime/include/compiler/: codegen.cpp  codegen.hpp  lexer.hpp  parser.cpp  type_checker.cpp
plugins/vm_runtime/include/platform/: gpio_driver.hpp  io_driver.hpp  linux_port.cpp  linux_port.hpp  modbus_driver.hpp
plugins/vm_runtime/src/: VmProgram.cpp  VmRuntimePlugin.cpp  execution_context.cpp  serializer.cpp  value.cpp  vm.cpp
simulation/: MotorControlTask.cpp  MotorControlTask.hpp  MotorSimulation.cpp  MotorSimulation.hpp
